cloudformation.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "zonecarpedalandev": {
      "Type": "AWS::Route53::HostedZone",
      "Properties": {
        "Name": "carpe.dalan.dev."
      }
    },
    "zonelocal": {
      "Type": "AWS::Route53::HostedZone",
      "Properties": {
        "Name": "local.",
        "HostedZoneConfig": {
          "Comment": "Created by Route 53 Auto Naming"
        }
      }
    },
    "zonecarpedalancom": {
      "Type": "AWS::Route53::HostedZone",
      "Properties": {
        "Name": "carpedalan.com."
      }
    },
    "dnsdevcarpedalancom": {
      "Type": "AWS::Route53::RecordSetGroup",
      "Properties": {
        "HostedZoneId": {
          "Ref": "zonecarpedalandev"
        },
        "RecordSets": [
          {
            "Name": "carpe.dalan.dev.",
            "Type": "A",
            "AliasTarget": {
              "HostedZoneId": "Z1H1FL5HABSF5",
              "DNSName": "dualstack.carpedalan-1137850722.us-west-2.elb.amazonaws.com"
            }
          }
        ]
      }
    },
    "dnsa06fef38dd7a1736b268b2bff0d2c140devcarpedalancom": {
      "Type": "AWS::Route53::RecordSetGroup",
      "Properties": {
        "HostedZoneId": {
          "Ref": "zonecarpedalandev"
        },
        "RecordSets": [
          {
            "Name": "_a06fef38dd7a1736b268b2bff0d2c140.carpe.dalan.dev.",
            "Type": "CNAME",
            "TTL": "300",
            "ResourceRecords": [
              "_a78bb4ea262fd8af49af955bdee1bf35.hkvuiqjoua.acm-validations.aws."
            ]
          }
        ]
      }
    },
    "dnscdndevcarpedalancom": {
      "Type": "AWS::Route53::RecordSetGroup",
      "Properties": {
        "HostedZoneId": {
          "Ref": "zonecarpedalandev"
        },
        "RecordSets": [
          {
            "Name": "cdn.carpe.dalan.dev.",
            "Type": "A",
            "AliasTarget": {
              "HostedZoneId": "Z2FDTNDATAQYW2",
              "DNSName": "d2lv9pp7lb7d05.cloudfront.net"
            }
          }
        ]
      }
    },
    "dnsphotosdevcarpedalancom": {
      "Type": "AWS::Route53::RecordSetGroup",
      "Properties": {
        "HostedZoneId": {
          "Ref": "zonecarpedalandev"
        },
        "RecordSets": [
          {
            "Name": "photos.carpe.dalan.dev.",
            "Type": "A",
            "AliasTarget": {
              "HostedZoneId": "Z2FDTNDATAQYW2",
              "DNSName": "d17xz5finbzq39.cloudfront.net"
            }
          }
        ]
      }
    },
    "dnscarpedalanservicelocal90912b0620004477b0264a8a32d9452a": {
      "Type": "AWS::Route53::RecordSetGroup",
      "Properties": {
        "HostedZoneId": {
          "Ref": "zonelocal"
        },
        "RecordSets": [
          {
            "Name": "carpedalan-service.local.",
            "SetIdentifier": "90912b0620004477b0264a8a32d9452a",
            "Type": "A",
            "TTL": "60",
            "HealthCheckId": "40365310-f14f-4154-b99b-994050cde27d",
            "ResourceRecords": [
              "10.0.21.15"
            ]
          }
        ]
      }
    },
    "vpc0061f574abc8e547e": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true"
      }
    },
    "vpc980ed6e0": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "172.31.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true"
      }
    },
    "vpc0f57e545b3fa1d299": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "Tags": [
          {
            "Key": "Name",
            "Value": "carpedalan-10"
          }
        ]
      }
    },
    "subnet9e2217e7": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.31.16.0/20",
        "AvailabilityZone": "us-west-2b",
        "VpcId": {
          "Ref": "vpc980ed6e0"
        }
      }
    },
    "subnet0a60631485b07c621": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.20.0/24",
        "AvailabilityZone": "us-west-2a",
        "VpcId": {
          "Ref": "vpc0f57e545b3fa1d299"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "carpedalan-10-1"
          }
        ]
      }
    },
    "subnetbd9490e7": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.31.0.0/20",
        "AvailabilityZone": "us-west-2c",
        "VpcId": {
          "Ref": "vpc980ed6e0"
        }
      }
    },
    "subnet025ccd9fc9af9ce6c": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.22.0/24",
        "AvailabilityZone": "us-west-2c",
        "VpcId": {
          "Ref": "vpc0f57e545b3fa1d299"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "carpedalan-10-3-private"
          }
        ]
      }
    },
    "subnet44cb776f": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.31.32.0/20",
        "AvailabilityZone": "us-west-2d",
        "VpcId": {
          "Ref": "vpc980ed6e0"
        }
      }
    },
    "subnet095b45f81721f41fa": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.23.0/24",
        "AvailabilityZone": "us-west-2d",
        "VpcId": {
          "Ref": "vpc0f57e545b3fa1d299"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "carpedalan-10-4-private"
          }
        ]
      }
    },
    "subnet0defb846": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.31.48.0/20",
        "AvailabilityZone": "us-west-2a",
        "VpcId": {
          "Ref": "vpc980ed6e0"
        }
      }
    },
    "subnet0231f5324a19febb7": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.21.0/24",
        "AvailabilityZone": "us-west-2b",
        "VpcId": {
          "Ref": "vpc0f57e545b3fa1d299"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "carpedalan-10-2"
          }
        ]
      }
    },
    "igw02f70d477b2ef150b": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "carpedalan-10"
          }
        ]
      }
    },
    "igw8a7875ec": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
      }
    },
    "doptb42cfdcc": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainName": "us-west-2.compute.internal",
        "DomainNameServers": [
          "AmazonProvidedDNS"
        ]
      }
    },
    "acl645e6d1c": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "vpc980ed6e0"
        }
      }
    },
    "acl05479d980e5a3b95d": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0061f574abc8e547e"
        }
      }
    },
    "acl00cc2daf567041281": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0f57e545b3fa1d299"
        }
      }
    },
    "rtb0ff8fa43d18c15e17": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0061f574abc8e547e"
        }
      }
    },
    "rtb0db83bae81f1dd9e1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0f57e545b3fa1d299"
        }
      }
    },
    "rtba6a92cdd": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc980ed6e0"
        }
      }
    },
    "eni02a612eb2ec1b1d98": {
      "Type": "AWS::EC2::NetworkInterface",
      "Properties": {
        "Description": "arn:aws:ecs:us-west-2:404112572358:attachment/cfe17076-6a6c-4367-9313-4c544bf7316a",
        "SourceDestCheck": "true",
        "SubnetId": {
          "Ref": "subnet0231f5324a19febb7"
        },
        "PrivateIpAddresses": [
          {
            "PrivateIpAddress": "10.0.21.15",
            "Primary": "true"
          }
        ],
        "GroupSet": [
          {
            "Ref": "sgdefault"
          }
        ]
      }
    },
    "distd17xz5finbzq39cloudfrontnet": {
      "Type": "AWS::CloudFront::Distribution",
      "Properties": {
        "DistributionConfig": {
          "Aliases": [
            "photos.carpe.dalan.dev"
          ],
          "Comment": "Private distrobution for carpedalan, needs signed URL or cookie",
          "Enabled": true,
          "PriceClass": "PriceClass_100",
          "DefaultCacheBehavior": {
            "TargetOriginId": "S3-carpedalan-photos/*",
            "ViewerProtocolPolicy": "redirect-to-https",
            "MinTTL": 0,
            "TrustedSigners": [
              "self"
            ],
            "AllowedMethods": [
              "HEAD",
              "GET"
            ],
            "CachedMethods": [
              "HEAD",
              "GET"
            ],
            "ForwardedValues": {
              "Cookies": {
                "Forward": "none"
              }
            }
          },
          "Origins": [
            {
              "DomainName": "carpedalan-photos.s3.amazonaws.com",
              "Id": "S3-carpedalan-photos/*",
              "S3OriginConfig": {
                "OriginAccessIdentity": "origin-access-identity/cloudfront/E31YU6ARAKQOE1"
              }
            }
          ],
          "Restrictions": {
            "GeoRestriction": {
              "RestrictionType": "none",
              "Locations": [

              ]
            }
          },
          "ViewerCertificate": {
            "SslSupportMethod": "sni-only",
            "MinimumProtocolVersion": "TLSv1.1_2016"
          }
        }
      }
    },
    "distd2lv9pp7lb7d05cloudfrontnet": {
      "Type": "AWS::CloudFront::Distribution",
      "Properties": {
        "DistributionConfig": {
          "Aliases": [
            "cdn.carpe.dalan.dev"
          ],
          "Comment": "Public CDN for carpedalan assets",
          "Enabled": true,
          "PriceClass": "PriceClass_All",
          "DefaultCacheBehavior": {
            "TargetOriginId": "S3-carpe-assets-prod",
            "ViewerProtocolPolicy": "redirect-to-https",
            "MinTTL": 0,
            "AllowedMethods": [
              "HEAD",
              "GET"
            ],
            "CachedMethods": [
              "HEAD",
              "GET"
            ],
            "ForwardedValues": {
              "Cookies": {
                "Forward": "none"
              }
            }
          },
          "Origins": [
            {
              "DomainName": "carpe-assets-prod.s3.amazonaws.com",
              "Id": "S3-carpe-assets-prod",
              "S3OriginConfig": {
              }
            }
          ],
          "Restrictions": {
            "GeoRestriction": {
              "RestrictionType": "none",
              "Locations": [

              ]
            }
          },
          "ViewerCertificate": {
            "SslSupportMethod": "sni-only",
            "MinimumProtocolVersion": "TLSv1.1_2016"
          }
        }
      }
    },
    "asgEC2ContainerServicecarpedalanEcsInstanceAsgCNL8MXAQ5HGK": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
        "AvailabilityZones": [
          "us-west-2a",
          "us-west-2b"
        ],
        "Cooldown": "300",
        "DesiredCapacity": "1",
        "HealthCheckGracePeriod": "0",
        "HealthCheckType": "EC2",
        "MaxSize": "1",
        "MinSize": "0",
        "VPCZoneIdentifier": [
          {
            "Ref": "subnet0a60631485b07c621"
          },
          {
            "Ref": "subnet0231f5324a19febb7"
          }
        ],
        "LaunchConfigurationName": {
          "Ref": "lcEC2ContainerServicecarpedalanEcsInstanceLc8EEZMMRGQ7TL"
        },
        "Tags": [
          {
            "Key": "Description",
            "Value": "This instance is the part of the Auto Scaling group which was created through ECS Console",
            "PropagateAtLaunch": true
          },
          {
            "Key": "Name",
            "Value": "ECS Instance - EC2ContainerService-carpedalan",
            "PropagateAtLaunch": true
          }
        ],
        "TerminationPolicies": [
          "Default"
        ]
      }
    },
    "lcEC2ContainerServicecarpedalanEcsInstanceLc8EEZMMRGQ7TL": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Properties": {
        "AssociatePublicIpAddress": true,
        "ImageId": "ami-0c4b05c0409735671",
        "InstanceType": "t2.micro",
        "KeyName": "leif-macbook-pro",
        "IamInstanceProfile": "arn:aws:iam::404112572358:instance-profile/ecsInstanceRole",
        "InstanceMonitoring": "true",
        "SecurityGroups": [
          {
            "Ref": "sgdefault"
          }
        ],
        "BlockDeviceMappings": [
          {
            "DeviceName": "/dev/xvdcz",
            "Ebs": {
              "VolumeSize": 22
            }
          }
        ]
      }
    },
    "volumevol017f2b4dbc672c9fd": {
      "Type": "AWS::EC2::Volume",
      "Properties": {
        "AvailabilityZone": "us-west-2b",
        "Size": "22",
        "VolumeType": "gp2"
      }
    },
    "rdscarpedalan": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "AllocatedStorage": "20",
        "AllowMajorVersionUpgrade": "false",
        "DBInstanceClass": "db.t2.micro",
        "Port": "5432",
        "PubliclyAccessible": "true",
        "StorageType": "gp2",
        "BackupRetentionPeriod": "0",
        "MasterUsername": "carpedalan",
        "MasterUserPassword": "MyPassword",
        "PreferredBackupWindow": "10:19-10:49",
        "PreferredMaintenanceWindow": "fri:09:41-fri:10:11",
        "DBName": "MyDatabase",
        "Engine": "postgres",
        "EngineVersion": "10.6",
        "LicenseModel": "postgresql-license",
        "DBSubnetGroupName": {
          "Ref": "dbsubnetdefaultvpc0f57e545b3fa1d299"
        },
        "VPCSecurityGroups": [
          {
            "Ref": "sgrdslaunchwizard"
          },
          {
            "Ref": "sgdefault"
          }
        ],
        "Tags": [
          {
            "Key": "workload-type",
            "Value": "other"
          }
        ]
      }
    },
    "s3carpeassetsprod": {
      "Type": "AWS::S3::Bucket",
      "Properties": {
        "WebsiteConfiguration": {
          "IndexDocument": "index.html"
        },
        "AccessControl": "Private",
        "VersioningConfiguration": {
          "Status": "Suspended"
        },
        "Tags": [
          {
            "Key": "carpedalan",
            "Value": ""
          }
        ]
      }
    },
    "s3carpedalanphotos": {
      "Type": "AWS::S3::Bucket",
      "Properties": {
        "AccessControl": "Private",
        "CorsConfiguration": {
          "CorsRules": [
            {
              "AllowedHeaders": [
                "*"
              ],
              "AllowedMethods": [
                "GET"
              ],
              "AllowedOrigins": [
                "*"
              ]
            }
          ]
        },
        "VersioningConfiguration": {
          "Status": "Suspended"
        },
        "Tags": [
          {
            "Key": "carpedalan",
            "Value": ""
          }
        ]
      }
    },
    "s3carpedalanpipelineprod": {
      "Type": "AWS::S3::Bucket",
      "Properties": {
        "AccessControl": "Private",
        "VersioningConfiguration": {
          "Status": "Suspended"
        }
      }
    },
    "dbsubnetdefault": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "default",
        "SubnetIds": [
          {
            "Ref": "subnet9e2217e7"
          },
          {
            "Ref": "subnetbd9490e7"
          },
          {
            "Ref": "subnet44cb776f"
          },
          {
            "Ref": "subnet0defb846"
          }
        ]
      }
    },
    "dbsubnetdefaultvpc0f57e545b3fa1d299": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "Created from the RDS Management Console",
        "SubnetIds": [
          {
            "Ref": "subnet0a60631485b07c621"
          },
          {
            "Ref": "subnet025ccd9fc9af9ce6c"
          },
          {
            "Ref": "subnet095b45f81721f41fa"
          },
          {
            "Ref": "subnet0231f5324a19febb7"
          }
        ]
      }
    },
    "sgcarpedalancloudformWebServerSecurityGroupIENNNH4YOY53": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Enable HTTPS access via port 443",
        "VpcId": {
          "Ref": "vpc980ed6e0"
        },
        "Tags": [
          {
            "Key": "carpedalan",
            "Value": "cloudform"
          }
        ]
      }
    },
    "sgdefault": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "default VPC security group",
        "VpcId": {
          "Ref": "vpc980ed6e0"
        }
      }
    },
    "sgrdslaunchwizard1": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Created from the RDS Management Console: 2019/02/27 04:09:48",
        "VpcId": {
          "Ref": "vpc980ed6e0"
        }
      }
    },
    "sgrdslaunchwizard": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Created from the RDS Management Console: 2019/02/27 04:08:36",
        "VpcId": {
          "Ref": "vpc0f57e545b3fa1d299"
        }
      }
    },
    "dbsgdefault": {
      "Type": "AWS::RDS::DBSecurityGroup",
      "Properties": {
        "GroupDescription": "default"
      }
    },
    "s3policycarpedalanphotos": {
      "Type": "AWS::S3::BucketPolicy",
      "Properties": {
        "Bucket": {
          "Ref": "s3carpedalanphotos"
        },
        "PolicyDocument": {
          "Version": "2008-10-17",
          "Id": "PolicyForCloudFrontPrivateContent",
          "Statement": [
            {
              "Sid": "1",
              "Effect": "Allow",
              "Principal": {
                "AWS": "arn:aws:iam::cloudfront:user/CloudFront Origin Access Identity E31YU6ARAKQOE1"
              },
              "Action": "s3:GetObject",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:s3:::",
                    {
                      "Ref": "s3carpedalanphotos"
                    },
                    "/*"
                  ]
                ]
              }
            }
          ]
        }
      }
    },
    "acl1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": "true",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl645e6d1c"
        }
      }
    },
    "acl2": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl645e6d1c"
        }
      }
    },
    "acl3": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": "true",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl05479d980e5a3b95d"
        }
      }
    },
    "acl4": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl05479d980e5a3b95d"
        }
      }
    },
    "acl5": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": "true",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl00cc2daf567041281"
        }
      }
    },
    "acl6": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl00cc2daf567041281"
        }
      }
    },
    "subnetacl1": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl645e6d1c"
        },
        "SubnetId": {
          "Ref": "subnet9e2217e7"
        }
      }
    },
    "subnetacl2": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl645e6d1c"
        },
        "SubnetId": {
          "Ref": "subnet44cb776f"
        }
      }
    },
    "subnetacl3": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl645e6d1c"
        },
        "SubnetId": {
          "Ref": "subnet0defb846"
        }
      }
    },
    "subnetacl4": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl645e6d1c"
        },
        "SubnetId": {
          "Ref": "subnetbd9490e7"
        }
      }
    },
    "subnetacl5": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl00cc2daf567041281"
        },
        "SubnetId": {
          "Ref": "subnet095b45f81721f41fa"
        }
      }
    },
    "subnetacl6": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl00cc2daf567041281"
        },
        "SubnetId": {
          "Ref": "subnet0a60631485b07c621"
        }
      }
    },
    "subnetacl7": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl00cc2daf567041281"
        },
        "SubnetId": {
          "Ref": "subnet025ccd9fc9af9ce6c"
        }
      }
    },
    "subnetacl8": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl00cc2daf567041281"
        },
        "SubnetId": {
          "Ref": "subnet0231f5324a19febb7"
        }
      }
    },
    "gw1": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0f57e545b3fa1d299"
        },
        "InternetGatewayId": {
          "Ref": "igw02f70d477b2ef150b"
        }
      }
    },
    "gw2": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpc980ed6e0"
        },
        "InternetGatewayId": {
          "Ref": "igw8a7875ec"
        }
      }
    },
    "subnetroute3": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtb0db83bae81f1dd9e1"
        },
        "SubnetId": {
          "Ref": "subnet0231f5324a19febb7"
        }
      }
    },
    "subnetroute4": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtb0db83bae81f1dd9e1"
        },
        "SubnetId": {
          "Ref": "subnet0a60631485b07c621"
        }
      }
    },
    "route1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtb0db83bae81f1dd9e1"
        },
        "GatewayId": {
          "Ref": "igw02f70d477b2ef150b"
        }
      },
      "DependsOn": "gw1"
    },
    "route2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtba6a92cdd"
        },
        "GatewayId": {
          "Ref": "igw8a7875ec"
        }
      },
      "DependsOn": "gw2"
    },
    "dchpassoc1": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0061f574abc8e547e"
        },
        "DhcpOptionsId": {
          "Ref": "doptb42cfdcc"
        }
      }
    },
    "dchpassoc2": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "vpc980ed6e0"
        },
        "DhcpOptionsId": {
          "Ref": "doptb42cfdcc"
        }
      }
    },
    "dchpassoc3": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0f57e545b3fa1d299"
        },
        "DhcpOptionsId": {
          "Ref": "doptb42cfdcc"
        }
      }
    },
    "ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgcarpedalancloudformWebServerSecurityGroupIENNNH4YOY53"
        },
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress3": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "tcp",
        "FromPort": "5432",
        "ToPort": "5432",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress4": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress5": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress6": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "-1",
        "SourceSecurityGroupId": {
          "Ref": "sgdefault"
        },
        "SourceSecurityGroupOwnerId": "404112572358"
      }
    },
    "ingress7": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgrdslaunchwizard1"
        },
        "IpProtocol": "tcp",
        "FromPort": "5432",
        "ToPort": "5432",
        "CidrIp": "24.17.244.88/32"
      }
    },
    "ingress8": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgrdslaunchwizard1"
        },
        "IpProtocol": "tcp",
        "FromPort": "5432",
        "ToPort": "5432",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress9": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgrdslaunchwizard"
        },
        "IpProtocol": "tcp",
        "FromPort": "5432",
        "ToPort": "5432",
        "CidrIp": "24.17.244.88/32"
      }
    },
    "ingress10": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "SourceSecurityGroupId": {
          "Ref": "sgdefault"
        },
        "SourceSecurityGroupOwnerId": "404112572358"
      }
    },
    "ingress11": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress1": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgcarpedalancloudformWebServerSecurityGroupIENNNH4YOY53"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress2": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress3": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress4": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgrdslaunchwizard1"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress5": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgrdslaunchwizard"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress6": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    }
  },
  "Description": "Services used for the carpedalan.com website"
}
